argocd/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - argocd.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  hosts:
  - argocd.local
  gateways:
  - argocd/argocd-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: argocd-dr
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  host: argocd-server
  trafficPolicy:
    tls:
      mode: DISABLE
